<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_layout_language"
        layout="@layout/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/toolbar_shadow_layout"
        layout="@layout/toolbar_action_bar_shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/change_lang_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toTopOf="@+id/label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            style="@style/LabelStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_language"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_shadow_layout" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            style="@style/LabelStyle8"
            android:layout_marginTop="8dp"
            android:text="@string/english" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            style="@style/LabelStyle8"
            android:layout_marginTop="8dp"
            android:text="@string/hindi" />
    </RadioGroup>

    <TextView
        android:id="@+id/label"
        style="@style/LabelStyle6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/update_cancel_1"
        app:layout_constraintBottom_toTopOf="@+id/update_language"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_lang_rg" />


    <Button
        android:id="@+id/update_language"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:text="@string/update"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        style="@style/LoginButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/cancel_update_choice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label" />

    <Button
        android:id="@+id/cancel_update_choice"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        style="@style/LoginButtonStyle"
        android:text="@string/cancel"
        android:visibility="gone"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_language" />


    <ImageView
        android:id="@+id/logo2"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_weight="1.5"
        android:alpha="0.6"
        android:contentDescription="logo"
        android:padding="16dp"
        android:src="@drawable/samarth_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
