<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_of_submissions"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/note"
        android:visibility="visible"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_below="@+id/toolbar"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:maxLines="2"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/note_submissions"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/click_to_download"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_below="@+id/note"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:maxLines="2"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/click_on_the_pdf_icon_to_download_the_pdf_report"/>
    <androidx.recyclerview.widget.RecyclerView
        android:paddingTop="4dp"
        android:scrollbars="vertical"
        android:id="@+id/submissions_rv"
        android:layout_below="@id/click_to_download"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:visibility="gone"
        android:id="@+id/no_internet_iv"
        android:layout_below="@+id/note"
        app:srcCompat="@drawable/no_submissions"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.appcompat.widget.AppCompatImageView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_loader"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="visible"
        android:layout_centerInParent="true"
        app:circleSize="20"
        app:duration="@android:integer/config_mediumAnimTime"
        app:endColor="@color/colorPrimary" />
    <LinearLayout
        android:id="@+id/internet_error_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:text="@string/internet_error_submission_screen"/>
        <Button
            android:id="@+id/retry_fetching"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="28dp"
            android:layout_height="65dp"
            style="@style/LoginButtonStyle"
            android:layout_gravity="center"
            android:text="@string/retry"/>

        <Button
            android:id="@+id/view_submissions"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="28dp"
            android:layout_height="65dp"
            style="@style/LoginButtonStyle"
            android:layout_gravity="center"
            android:text="@string/view_submissions"/>
    </LinearLayout>
</RelativeLayout>